implemented module-info for encapsulation